<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.renosys.handy.MainActivity">
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </WebView>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/input_ip_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_welcome"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            />
        <TextView
            android:id="@+id/text_enter_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_input_ip_address"
            android:textSize="14dp"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:paddingTop="30px"
            />
        <EditText
            android:id="@+id/txt_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789.http://"
            android:hint="@string/string_new_ip"
            android:background="@drawable/shape"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:paddingTop="20dp"
            android:cursorVisible="true"
            android:singleLine="true"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/email_next_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_next"
            android:textStyle="normal"
            android:background="@drawable/button"
            android:textColor="@color/white" />

    </RelativeLayout>
</LinearLayout>
